--- a/style/index.css
+++ b/style/index.css
@@ -34,8 +34,8 @@ body main #pravyOkraj {
   background-color: #6B717E;
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: 30% 30% 30% 10%;
-      grid-template-rows: 30% 30% 30% 10%;
+  -ms-grid-columns: 100%;
+      grid-template-columns: 100%;
   color: white;
 }
 
@@ -68,12 +68,13 @@ body main #pravyOkraj #preklikNaVsetkyRecenzie {
   text-decoration: none;
   -ms-grid-column-align: center;
       justify-self: center;
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
+  -ms-flex-item-align: end;
+      -ms-grid-row-align: end;
+      align-self: end;
   color: black;
   padding: 5px;
   border-radius: 5px;
+  margin-bottom: 10px;
 }
 
 body main #pravyOkraj #preklikNaVsetkyRecenzie:hover {
